--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-boot
+
+# HTML 폼에서 PUT, DELETE 등의 HTTP 메서드를 사용할 수 있도록 설정
+spring.mvc.hiddenmethod.filter.enabled=true
+
+# 요청과 응답의 문자 인코딩을 UTF-8로 설정
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
